[gd_scene load_steps=4 format=3 uid="uid://bon4n6x2rayul"]

[ext_resource type="Script" path="res://bank.gd" id="1_httop"]
[ext_resource type="FontFile" uid="uid://c4k17wq62j7bc" path="res://resources/handwrite_font.ttf" id="2_7v5mr"]

[sub_resource type="Theme" id="Theme_6hpcw"]
default_font_size = 50

[node name="Bank" type="Node2D"]
position = Vector2(275, 55)
script = ExtResource("1_httop")
auto_win = true

[node name="BankInfo" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -56.0
offset_right = 248.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="BalanceLabel" type="RichTextLabel" parent="BankInfo"]
clip_contents = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_6hpcw")
theme_override_colors/default_color = Color(0.0728426, 0.0728426, 0.0728426, 1)
theme_override_fonts/normal_font = ExtResource("2_7v5mr")
bbcode_enabled = true
text = "1000"
fit_content = true

[node name="IncomeLabel" type="RichTextLabel" parent="BankInfo"]
clip_contents = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_6hpcw")
theme_override_colors/default_color = Color(0.0728426, 0.0728426, 0.0728426, 1)
theme_override_fonts/normal_font = ExtResource("2_7v5mr")
bbcode_enabled = true
text = "1000"
fit_content = true

[node name="IncomeTimer" type="Timer" parent="."]

[connection signal="timeout" from="IncomeTimer" to="." method="_on_income_timer_timeout"]
